--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                         <li><i class="fas fa-comments"></i> Communication</li>
                         <li><i class="fas fa-users"></i> Team Collaboration</li>
                         <li><i class="fas fa-chalkboard-teacher"></i> Teaching & Mentoring</li>
-                        <li><i class="fas fa-language"></i> Multilingual</li>
+                        <li><i class="fas fa-language"></i> Languages</li>
                     </ul>
+                    <p>English (Fluent), Persian (Native), Italian (Fluent), German (Beginner)</p>
                 </div>
-            </div>
         </section>
 
         <section id="contact" class="section-card">
