--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/mostafa-sheikhalishahi-phd/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/mostafaalishahi" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://scholar.google.com/citations?user=ck5btLoAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
             </div>
         </section>
     </main>
