--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </div>
     </header>
 
-    <nav id="navbar">
+     <nav id="navbar">
         <ul>
-            <li><a href="#about"><i class="fas fa-user"></i> About Me</a></li>
-            <li><a href="#work"><i class="fas fa-briefcase"></i> Work</a></li>
-            <li><a href="#projects"><i class="fas fa-project-diagram"></i> Projects</a></li>
-            <li><a href="#skills"><i class="fas fa-cogs"></i> Skills</a></li>
-            <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+            <li><a href="#about"><i class="fas fa-user"></i> <span>About</span></a></li>
+            <li><a href="#work"><i class="fas fa-briefcase"></i> <span>Work</span></a></li>
+            <li><a href="#projects"><i class="fas fa-project-diagram"></i> <span>Projects</span></a></li>
+            <li><a href="#skills"><i class="fas fa-cogs"></i> <span>Skills</span></a></li>
+            <li><a href="#contact"><i class="fas fa-envelope"></i> <span>Contact</span></a></li>
         </ul>
     </nav>
 
