--- a/index.html
+++ b/index.html
@@ -78,17 +78,42 @@
                     </ul>
                 </div>
                 <div class="skill-set">
-                    <h3>Soft Skills</h3>
-                    <ul>
-                        <li><i class="fas fa-lightbulb"></i> Analytical Thinking</li>
-                        <li><i class="fas fa-cogs"></i> Creative Problem-Solving</li>
-                        <li><i class="fas fa-comments"></i> Communication</li>
-                        <li><i class="fas fa-users"></i> Team Collaboration</li>
-                        <li><i class="fas fa-chalkboard-teacher"></i> Teaching & Mentoring</li>
-                        <li><i class="fas fa-language"></i> Languages</li>
-                    </ul>
-                    <p>English (Fluent), Persian (Native), Italian (Fluent), German (Beginner)</p>
-                </div>
+    <h3>Soft Skills</h3>
+    <ul>
+        <li><i class="fas fa-lightbulb"></i> Analytical Thinking</li>
+        <li><i class="fas fa-cogs"></i> Creative Problem-Solving</li>
+        <li><i class="fas fa-comments"></i> Communication</li>
+        <li><i class="fas fa-users"></i> Team Collaboration</li>
+        <li><i class="fas fa-chalkboard-teacher"></i> Teaching & Mentoring</li>
+    </ul>
+    <h4>Languages</h4>
+    <div class="language-skills">
+        <div class="language-skill">
+            <p>English (Fluent)</p>
+            <div class="progress-bar">
+                <div class="progress" style="width: 95%;"></div>
+            </div>
+        </div>
+        <div class="language-skill">
+            <p>Persian (Native)</p>
+            <div class="progress-bar">
+                <div class="progress" style="width: 100%;"></div>
+            </div>
+        </div>
+        <div class="language-skill">
+            <p>Italian (Fluent)</p>
+            <div class="progress-bar">
+                <div class="progress" style="width: 90%;"></div>
+            </div>
+        </div>
+        <div class="language-skill">
+            <p>German (Beginner)</p>
+            <div class="progress-bar">
+                <div class="progress" style="width: 30%;"></div>
+            </div>
+        </div>
+    </div>
+</div>
         </section>
 
         <section id="contact" class="section-card">
