--- a/index.html
+++ b/index.html
@@ -89,25 +89,25 @@
     <h4>Languages</h4>
     <div class="language-skills">
         <div class="language-skill">
-            <p>English (Fluent)</p>
+            <p>English</p>
             <div class="progress-bar">
                 <div class="progress" style="width: 95%;"></div>
             </div>
         </div>
         <div class="language-skill">
-            <p>Persian (Native)</p>
+            <p>Persian</p>
             <div class="progress-bar">
                 <div class="progress" style="width: 100%;"></div>
             </div>
         </div>
         <div class="language-skill">
-            <p>Italian (Fluent)</p>
+            <p>Italian</p>
             <div class="progress-bar">
                 <div class="progress" style="width: 90%;"></div>
             </div>
         </div>
         <div class="language-skill">
-            <p>German (Beginner)</p>
+            <p>German</p>
             <div class="progress-bar">
                 <div class="progress" style="width: 30%;"></div>
             </div>
